--- a/HOTELMANAGEMENT/admin/css/style.css
+++ b/HOTELMANAGEMENT/admin/css/style.css
@@ -42,6 +42,14 @@ input::-webkit-inner-spin-button {
     height: 2px;
 }
 
+.custom-alert{
+    position: fixed;
+    top: 25px;
+    right: 25px;
+    border-width: 3px;
+    border-color: rgb(138, 30, 30);
+}
+
 
 
 
