--- a/HOTELMANAGEMENT/style.css
+++ b/HOTELMANAGEMENT/style.css
@@ -31,6 +31,13 @@ body{
     height: 2px;
 }
 
+.underline2{
+    width: 150px;
+    margin: 0 auto;
+    height: 2px;
+    color: black;
+}
+
 
 
 
