--- a/HOTELMANAGEMENT/admin/css/style.css
+++ b/HOTELMANAGEMENT/admin/css/style.css
@@ -41,6 +41,11 @@ input::-webkit-inner-spin-button {
     margin: 0 auto;
     height: 2px;
 }
+.custom-alert{
+    position: fixed;
+    top: 25px;
+    right: 25px;
+}
 
 
 
